welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:10: error: illegal start of simple expression
  while()(!estSurBiscuit){
        ^DwarfCode:15: error: ')' expected but '}' found.
}
^