welcome.lessons.welcome.summative.Moria.scala.code
droite()
droite()
while(!estFaceMur){
  while(!estSurBiscuit){
    avance()
  }
  prendBiscuit()
  droite()
  droite()
  while()(!estSurBiscuit){
    avance()
  }
  recule()
  poseBiscuit()
}
